[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ord-app"
description = "App for the Open Reaction Database"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]",
    "gunicorn",
    "jinja2",
    "numpy",
    "ord-schema==0.3.89",
    "pandas",
    "protobuf==4.22.3",
    "psycopg[binary,pool]>=3",
    "rdkit",
    "uvicorn[standard]",
]
dynamic = ["version"]

[project.optional-dependencies]
"tests" = [
    "black>=22.3.0",
    "coverage>=5.2.1",
    "httpx",
    "pylint>=2.13.9",
    "pytest>=6.2.5",
    "pytest-cov>=3.0.0",
    "pytype>=2022.5.19",
    "tenacity",
    "testing-postgresql",
]

[tool.black]
line-length = 120

[tool.isort]
skip_glob = ["**/*_pb2.py*"]
line_length = 120
profile = "black"
known_third_party = ["ord_schema"]

[tool.pytype]
inputs = ["ord_app"]
exclude = ["**/*_test.py", "**/test_*.py", "build/", "dist/"]
keep_going = true
disable = ["module-attr", "pyi-error"]
jobs = 0
